fixed some ui alignment issues at smaller resolutions (now supports 1080p and up)

--- a/node-ui-dev/src/app/dashboard/dashboard.component.scss
+++ b/node-ui-dev/src/app/dashboard/dashboard.component.scss
@@ -194,3 +194,21 @@ mat-form-field {
   transition: 0.1s all ease;
   background-color: $select;
 }
+
+.top-button-container {
+  padding-right: 44px;
+}
+
+.grid-button {
+  width: 20px;
+  height: 40px;
+
+  margin-top: 1px;
+  margin-left: 1px;
+
+  border-radius: 0px;
+}
+
+.button-grid-container{
+  margin-bottom: 1.25em;
+}
